# zenith

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  codecov.yml  justfile  rust-toolchain.toml  rustfmt.toml  vetur.config.js
client/windows/: .gitignore  Cargo.toml  build.rs
client/windows/src/: composition.rs  ext.rs  index.html  main.rs  webview.rs
client/windows/vlc/: Cargo.toml  build.rs  libvlc.h
flutter/: .gitignore  .metadata  Cargo.toml  analysis_options.yaml  build.yaml  justfile  pubspec.yaml  zenith.apk.json
flutter/android/: build.gradle
flutter/android/app/: build.gradle
flutter/crates/dart-sdk-sys/: Cargo.toml  build.rs
flutter/crates/flutter-codec/: Cargo.toml
flutter/crates/flutter-desktop-messenger/: Cargo.toml
flutter/crates/flutter-plugin/: Cargo.toml
flutter/crates/flutter-windows-sys/: Cargo.toml  build.rs
flutter/crates/mpv-sys/: Cargo.toml  build.rs
flutter/crates/windows-app-sdk/: Cargo.toml  build.rs
flutter/ios/Runner/: Info.plist
flutter/lib/: api.dart  api.freezed.dart  api.g.dart  cookies.dart  dio_client.dart  download.dart  download_web.dart  drawer.dart  fade_in_image.dart  format_utils.dart  github.dart  github.g.dart  language_codes.dart  main.dart  main_navigation.dart  main_router.dart  platform.dart  poster_item.dart  preferences.dart  preferences.freezed.dart  preferences.g.dart  remote_playback.dart  remote_playback.freezed.dart  remote_playback_api.g.dart  router.dart  router.gr.dart  theme.dart  theme.tailor.dart  themes.dart  themes.g.dart  update_dialog.dart  updater.dart  window.dart
flutter/lib/database/: database.dart  database.g.dart
flutter/lib/downloader/: downloader.dart  downloader_base.dart  downloader_io.dart
flutter/lib/http_client/: http_client_stub.dart  http_client_web.dart
flutter/lib/media_route_button/: media_route_button.dart  media_route_button_controller.freezed.dart  media_route_button_controller.g.dart  media_route_button_cubit.dart  media_route_button_cubit.freezed.dart
flutter/lib/media_route_chooser/: media_route_chooser_controller.freezed.dart  media_route_chooser_controller.g.dart  media_route_chooser_cubit.dart  media_route_chooser_cubit.freezed.dart  media_route_chooser_dialog.dart
flutter/lib/media_route_controller/: media_route_controller_controller.dart  media_route_controller_controller.freezed.dart  media_route_controller_controller.g.dart  media_route_controller_cubit.dart  media_route_controller_cubit.freezed.dart  media_route_controller_dialog.dart
flutter/lib/router/: page.dart  pop_scope.dart  route_information_parser.dart  router.dart  router_controller.dart  router_delegate.dart  stack_observer.dart  stack_router.dart
flutter/lib/routes/: routes.dart
flutter/lib/screens/: collection_details.dart  collections.dart  home.dart  home.freezed.dart  home.g.dart  item_details.dart  login.dart  media_library.dart  settings.dart  setup.dart  show_details.dart  video_player.dart
flutter/pigeons/: remote_playback.dart
flutter/test/: widget_test.dart
flutter/video_player/video_player/: README.md
flutter/video_player/video_player_android/: README.md
flutter/video_player/video_player_ffi/: Cargo.toml  README.md  pubspec.yaml
flutter/video_player/video_player_web/: pubspec.yaml
flutter/web/: index.html
flutter/windows/: CMakeLists.txt  plugin_registrar.cc  zenith.appinstaller
flutter/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter/windows/runner/: CMakeLists.txt  Cargo.toml  Runner.rc  build.rs  main.cpp
server/axum-codegen/: Cargo.toml
server/axum-codegen-macros/: Cargo.toml
server/axum-codegen-macros/src/: lib.rs
server/axum-codegen/src/: lib.rs  reflection.rs
server/axum-files/: Cargo.toml
server/axum-files/src/: lib.rs
server/axum-files/test/: test.txt
server/client-gen/: Cargo.toml
server/client-gen/src/: main.rs
server/db/: .gitattributes  Cargo.toml  build.rs  new_migration.sh
server/db/migrations/: 20221207120648_collections.sql  20221224150754_metadata_provider.sql  20230216113153_subtitle_type.sql  20230410172401_video_path_stem.sql  20230618085148_cast.sql  20230618162615_crew.sql  20231022143554_video_crop.sql  20250209155346_trakt_auth.sql
server/db/src/: access_tokens.rs  collections.rs  images.rs  items.rs  lib.rs  media.rs  people.rs  sql.rs  streams.rs  subtitles.rs  trakt.rs  user_registrations.rs  users.rs  video_files.rs  videos.rs
server/migrations/: Cargo.toml  build.rs  new.sh
server/migrations/migrations/: 20210729105737_add_unique_constraints.sql  20211030165125_subtitles_v2.sql  20221211142452_metadata.sql  20230121173622_trailers.sql  20230408085807_multiple_video_files.sql  20230414220002_video_scanned_at.sql  20230414222557_audio_channels.sql  20230417123322_users.sql  20231228161701_access_tokens.sql
server/migrations/src/: lib.rs  migrations.rs  schema.sql
server/test-macros/: Cargo.toml
server/test-macros/src/: lib.rs
server/tmdb/: Cargo.toml
server/tmdb/src/: lib.rs
server/zenith/: .gitignore  Cargo.toml  router.rs
server/zenith/src/: config.rs  cropdetect.rs  lib.rs  main.rs  metadata.rs  password_utils.rs  server.rs  sql.rs  subtitles.rs  trakt.rs  transcoder.rs  util.rs  utils.rs  video_prober.rs
server/zenith/test/: auth.rs  cast.rs  main.rs  media.rs  metadata.rs  playback.rs  users.rs
zenith/: Cargo.toml  build.rs
zenith/src/: broadcaster.rs  config.rs  ext.rs  ffmpeg.rs  ffprobe.rs  fs.rs  lib.rs  library.rs  lifecycle.rs  main.rs  metadata.rs  subtitles.rs  tmdb.rs  transcoder.rs  utils.rs  watcher.rs
zenith/src/api/: common.rs  error.rs  events.rs  ext.rs  files.rs  handlers.rs  hls.rs  import.rs  items.rs  library.rs  metadata.rs  mod.rs  movies.rs  progress.rs  scanner.rs  stream.rs  subtitles.rs  transcoder.rs  tv.rs  tv_shows.rs  videos.rs
zenith/src/db/: collections.rs  episodes.rs  items.rs  media.rs  mod.rs  movies.rs  (+7 more)
zenith_http/: Cargo.toml
zenith_http/src/: lib.rs  request.rs  response.rs
zenith_server/: Cargo.toml
zenith_server/src/: lib.rs  request.rs  response.rs
(+659 files in other folders)
