[workspace]
members = ["server/*"]
exclude = ["desktop", "flutter"]
resolver = "2"

[workspace.dependencies]
argon2 = "0.5"
assert-json-diff = "2.0"
async-trait = "0.1"
axum = { version = "0.7", default-features = false }
axum-extra = "0.9"
bytes = "1.1"
camino = "1.1"
color-eyre = "0.6"
eyre = "0.6"
futures = "0.3"
headers = "0.4"
hex = "0.4"
http-body-util = "0.1"
hyper = "1.0"
hyper-util = "0.1"
indexmap = "2.1"
insta = "1.19"
inventory = "0.3"
itertools = "0.12"
lazy-regex = "3.1"
libtest-mimic = "0.7"
markdown = "0.3"
mime = "0.3"
mime_guess = "2.0"
mockall = "0.12"
notify = { version = "6.1", default-features = false }
openapiv3 = "2.0"
pretty_assertions = "1.3"
quote = "1"
rand = "0.8"
regex = "1.6"
reqwest = { version = "0.12", default-features = false }
serde = "1.0"
serde_json = "1.0"
serde_qs = { git = "https://github.com/Wicpar/serde_qs", rev = "76265b2" }
serde_yaml = "0.9"
sha2 = "0.10"
speq = { git = "https://github.com/hasali19/speq", rev = "d7263383c1f25fd80e517cfe7a6f514576e46220" }
sqlx = { version = "0.7", default-features = false }
structmeta = "0.3"
strum = "0.26"
syn = { version = "2", default-features = false }
tempfile = "3.5"
thiserror = "1.0"
time = "0.3"
tokio = "1.20"
tokio-stream = "0.1"
tokio-util = "0.7"
tower = "0.4"
tower-http = "0.5"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = "0.3"
url = "2.2"
uuid = "1.1"
walkdir = "2.3"
wiremock = "0.6"

[profile.dev.build-override]
opt-level = 3

[patch.crates-io]
camino = { path = "external/camino" }

[patch."https://github.com/hasali19/speq"]
speq = { path = "external/speq/speq" }
