[workspace]
members = ["server/*"]
exclude = ["desktop", "flutter"]
resolver = "2"
package.authors = ["Hasan Mohsin <hasan@hasali.dev>"]
package.edition = "2024"

[workspace.dependencies]
argon2 = "0.5"
assert-json-diff = "2.0"
async-trait = "0.1"
axum = { version = "0.8", default-features = false }
axum-extra = "0.10"
bytes = "1.10"
camino = "1.1"
color-eyre = "0.6"
eyre = "0.6"
futures = "0.3"
headers = "0.4"
hex = "0.4"
http-body-util = "0.1"
hyper = "1.0"
hyper-util = "0.1"
indexmap = "2.12"
insta = "1.43"
inventory = "0.3"
itertools = "0.14"
lazy-regex = "3.1"
libtest-mimic = "0.8"
markdown = "0.3"
mime = "0.3"
mime_guess = "2.0"
mockall = "0.13"
nom = "8.0.0"
notify = { version = "8.0", default-features = false }
openapiv3 = "2.0"
pretty_assertions = "1.3"
quote = "1"
rand = "0.9"
regex = "1.6"
reqwest = { version = "0.12", default-features = false }
serde = "1.0"
serde_json = "1.0"
serde_qs = "0.13"
serde_yaml = "0.9"
sha2 = "0.10"
speq = { git = "https://github.com/hasali19/speq" }
sqlx = { version = "0.8", default-features = false }
structmeta = "0.3"
strum = "0.26"
syn = { version = "2", default-features = false }
tap = "1.0.1"
tempfile = "3.19"
thiserror = "2.0"
time = "0.3"
tokio = "1.44"
tokio-stream = "0.1"
tokio-util = "0.7"
tower = "0.5"
tower-http = "0.6"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = "0.3"
url = "2.2"
uuid = "1.16"
walkdir = "2.3"
wiremock = "0.6"

[profile.dev.build-override]
opt-level = 3

[patch.crates-io]
camino = { path = "external/camino" }
serde_qs = { git = "https://github.com/Atrox/serde_qs", rev = "2cfa3ee" }

[patch."https://github.com/hasali19/speq"]
speq = { path = "external/speq/speq" }
