[workspace]
resolver = "2"
members = [
    "crates/*",
    "packages/zenith/windows/runner",
    "packages/video_player",
]
exclude = ["windows/flutter", "packages/zenith/flion"]

[workspace.dependencies]
flutter-desktop-messenger = { path = "crates/flutter-desktop-messenger" }
flutter-windows-sys = { path = "crates/flutter-windows-sys" }
