[package]
name    = "zenith"
version = "0.0.0"
authors = ["Hasan Ali <git@hasali.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files        = "0.6.0-beta.4"
actix-http         = "=3.0.0-beta.5"
actix-rt           = "2.2.0"
actix-service      = "=2.0.0-beta.5"
actix-web          = "=4.0.0-beta.5"
async-trait        = "0.1"
bytes              = "1.0"
color-eyre         = "0.5"
eyre               = "0.6"
futures            = "0.3"
itertools          = "0.10"
notify             = "4.0"
once_cell          = "1.7"
regex              = "1.4"
serde_json         = "1.0"
serde_yaml         = "0.8"
time               = "0.2"
tokio-stream       = "0.1"
tokio-util         = "0.6"
tracing            = "0.1"
tracing-subscriber = "0.2"
url                = "2.2"
walkdir            = "2.3"

[dependencies.reqwest]
version  = "0.11"
features = ["json"]

[dependencies.serde]
version  = "1.0"
features = ["derive"]

[dependencies.sqlx]
version          = "0.5"
default-features = false
features         = ["macros", "runtime-actix-native-tls", "sqlite"]

[dependencies.tokio]
version  = "1.5"
features = ["macros", "fs", "process"]
