[package]
name = "zenith"
version = "0.0.0"
authors = ["Hasan Ali <git@hasali.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "1.0"
color-eyre = "0.5"
eyre = "0.6"
futures = "0.3"
itertools = "0.10"
mime = "0.3"
mime_guess = "2.0"
once_cell = "1.8"
regex = "1.5"
serde_json = "1.0"
serde_yaml = "0.8"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.2"
url = "2.2"
walkdir = "2.3"

migrations = { path = "../migrations" }

[dependencies.atium]
git = "https://github.com/hasali19/atium"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["macros", "runtime-actix-rustls", "sqlite"]

[dependencies.time]
version = "0.3"
features = ["parsing"]

[dependencies.tokio]
version = "1.10"
features = ["macros", "fs", "process"]

[dependencies.uuid]
version = "0.8"
features = ["v4"]
