[package]
name    = "zenith_http"
version = "0.0.0"
authors = ["Hasan Ali <git@hasali.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait      = "0.1"
headers          = "0.3"
route-recognizer = "0.2"
serde            = "1.0"
serde_json       = "1.0"
serde_qs         = "0.8"
tracing          = "0.1"

[dependencies.hyper]
version  = "0.14"
features = ["full"]

[dependencies.tokio]
version  = "1.1"
features = ["macros", "signal"]
