[package]
name    = "zenith_server"
version = "0.0.0"
authors = ["Hasan Ali <git@hasali.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait      = "0.1"
log              = "0.4"
route-recognizer = "0.2"
serde            = "1.0"
serde_json       = "1.0"
serde_qs         = "0.8"

[dependencies.hyper]
version  = "0.14"
features = ["full"]

[dependencies.tokio]
version  = "1.1"
features = ["macros", "signal"]
