[package]
name = "zenith_windows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
webview2-com = "0.15.0"
widestring = "1.0.0-beta.1"
windows_macros = "0.30.0"
raw-window-handle = "0.4.3"

[dependencies.windows]
version = "0.30.0"
features = [
    "alloc",
    "Foundation_Numerics",
    "System",
    "UI_Composition_Desktop",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT_Composition",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies.winit]
version = "0.26.1"
default-features = false

[build-dependencies]
winres = "0.1.12"
