[package]
name = "zenith_windows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["vlc"]

[dependencies]
bitflags = "1.3.2"
env_logger = "0.9.0"
log = "0.4.16"
parking_lot = "0.12.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
vlc = { path = "vlc" }
webview2-com = "0.15.0"
widestring = "1.0.0-beta.1"
windows_macros = "0.30.0"
raw-window-handle = "0.4.3"

[dependencies.windows]
version = "0.30.0"
features = [
    "alloc",
    "Foundation_Numerics",
    "System",
    "UI_Composition_Desktop",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT_Composition",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies.winit]
version = "0.26.1"
default-features = false

[build-dependencies]
winres = "0.1.12"
