[package]
name = "axum-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum-codegen-macros = { path = "../axum-codegen-macros" }
inventory = "0.3"

[dependencies.axum]
version = "0.5"
default-features = false
