[package]
name = "axum-files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headers = "0.3"
mime_guess = "2.0"

[dependencies.axum]
version = "0.6"
default-features = false
features = ["headers"]

[dependencies.tokio]
version = "1"
features = ["fs", "io-util"]

[dependencies.tokio-util]
version = "0.7"
features = ["codec"]
