[package]
name = "axum-files"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
headers = { workspace = true }
mime_guess = { workspace = true }
speq = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
tokio-util = { workspace = true, features = ["codec"] }
