[package]
name = "client-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy-regex = "2.3"
zenith = { path = "../zenith" }

[dependencies.speq]
git = "https://github.com/hasali19/speq"
rev = "02fa74c28876687ddc289ae520ff3b9bbbc35f86"
features = ["axum"]
