[package]
name = "client-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy-regex = "2.3"
zenith = { path = "../zenith" }

[dependencies.speq]
git = "https://github.com/hasali19/speq"
rev = "d7263383c1f25fd80e517cfe7a6f514576e46220"
features = ["axum"]
