[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
itertools = "0.10"
tempfile = "3.5"
tracing = "0.1"

migrations = { path = "../migrations" }

[dependencies.camino]
version = "1.1"
features = ["serde1", "sqlx-sqlite"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["macros", "runtime-tokio-rustls", "sqlite"]

[dependencies.tokio]
version = "1.20"
features = ["fs"]
