[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = { workspace = true, features = ["serde1", "sqlx-sqlite"] }
eyre = { workspace = true }
itertools = { workspace = true }
sqlx = { workspace = true, features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlite",
] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
strum = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
hex = { workspace = true }
sha2 = { workspace = true }
