[package]
name = "migrations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sqlx]
git = "https://github.com/launchbadge/sqlx"
default-features = false
features = ["macros", "migrate", "runtime-tokio-rustls", "sqlite"]
