[package]
name = "migrations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
eyre = "0.6"
hex = "0.4"
tracing = "0.1"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["macros", "migrate", "runtime-tokio-rustls", "sqlite"]

[build-dependencies]
sha2 = "0.10"
