[package]
name = "migrations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
sqlx = { workspace = true, features = [
    "macros",
    "migrate",
    "runtime-tokio-rustls",
    "sqlite",
] }
tracing = { workspace = true }

[build-dependencies]
sha2 = { workspace = true }
