[package]
name = "test-macros"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
structmeta = { workspace = true }
syn = { workspace = true }
