[package]
name = "tmdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
serde_json = "1.0"
url = "2.2"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
