[package]
name = "tmdb"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde_json = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
serde = { workspace = true, features = ["derive"] }
