[package]
name = "zenith"
version = "0.0.0"
authors = ["Hasan Ali <git@hasali.co.uk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "1.1"
color-eyre = "0.6"
eyre = "0.6"
futures = "0.3"
indexmap = "1.9"
markdown = "0.3"
notify = "5.0.0-pre.15"
once_cell = "1.13"
openapiv3 = "1.0"
regex = "1.6"
serde_json = "1.0"
serde_yaml = "0.8"
sha2 = "0.10"
tokio-util = "0.7"
tracing = "0.1"
walkdir = "2.3"

axum-files = { path = "../axum-files" }
migrations = { path = "../migrations" }
tmdb = { path = "../tmdb" }

[dependencies.axum]
version = "0.5"
default-features = false
features = ["json", "multipart", "original-uri", "tower-log"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_qs]
version = "0.10"
features = ["axum"]

[dependencies.speq]
git = "https://github.com/hasali19/speq"
rev = "8df3410ac4dd88cda5a62d584fbaa77ec4a6afd2"
features = ["axum", "serde_qs_axum"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["macros", "runtime-tokio-rustls", "sqlite"]

[dependencies.time]
version = "0.3"
features = ["parsing"]

[dependencies.tokio]
version = "1.20"
features = ["macros", "fs", "io-util", "process", "signal"]

[dependencies.tokio-stream]
version = "0.1"
features = ["sync"]

[dependencies.tower-http]
version = "0.3"
features = ["set-header", "trace"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.uuid]
version = "1.1"
features = ["v4"]
