[package]
name = "zenith"
version = "0.0.0"
authors = ["Hasan Ali <git@hasali.co.uk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "tests"
path = "test/main.rs"
harness = false

[dependencies]
async-trait = "0.1"
bytes = "1.1"
color-eyre = "0.6"
eyre = "0.6"
futures = "0.3"
indexmap = "1.9"
itertools = "0.10.5"
markdown = "0.3"
once_cell = "1.13"
openapiv3 = "1.0"
regex = "1.6"
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3.3"
thiserror = "1.0"
tokio-util = "0.7"
tracing = "0.1"
tracing-error = "0.2"
walkdir = "2.3"

axum-files = { path = "../axum-files" }
db = { path = "../db" }
migrations = { path = "../migrations" }
tmdb = { path = "../tmdb" }

[dependencies.axum]
version = "0.6"
default-features = false
features = ["json", "multipart", "original-uri", "tokio", "tower-log"]

[dependencies.camino]
version = "1.1"
features = ["serde1", "sqlx-sqlite"]

[dependencies.notify]
version = "5.0"
default-features = false

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_qs]
version = "0.12"
features = ["axum"]

[dependencies.speq]
git = "https://github.com/hasali19/speq"
rev = "d7263383c1f25fd80e517cfe7a6f514576e46220"
features = ["axum", "camino", "serde_qs_axum"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["macros", "runtime-tokio-rustls", "sqlite"]

[dependencies.time]
version = "0.3"
features = ["parsing"]

[dependencies.tokio]
version = "1.20"
features = ["macros", "fs", "io-util", "process", "signal"]

[dependencies.tokio-stream]
version = "0.1"
features = ["sync"]

[dependencies.tower-http]
version = "0.4"
features = ["cors", "trace"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.uuid]
version = "1.1"
features = ["v4"]

[dev-dependencies]
assert-json-diff = "2.0"
hyper = "0.14"
inventory = "0.3"
libtest-mimic = "0.6"
mockall = "0.11"
pretty_assertions = "1.3"
test-macros = { path = "../test-macros" }
tower = "0.4"

[dev-dependencies.insta]
version = "1.19"
features = ["json"]

[dev-dependencies.time]
version = "0.3"
features = ["macros"]
