[package]
name = "zenith"
version = "0.0.0"
authors = ["Hasan Ali <git@hasali.co.uk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "tests"
path = "test/main.rs"
harness = false

[features]
mocks = ["dep:mockall"]

[dependencies]
argon2 = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = [
    "json",
    "http1",
    "multipart",
    "original-uri",
    "tokio",
    "tower-log",
] }
axum-extra = { workspace = true, features = ["cookie-private"] }
axum-files = { path = "../axum-files" }
bytes = { workspace = true }
camino = { workspace = true, features = ["serde1", "sqlx-sqlite"] }
color-eyre = { workspace = true }
db = { path = "../db" }
eyre = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
markdown = { workspace = true }
mockall = { workspace = true, optional = true }
notify = { workspace = true }
openapiv3 = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_qs = { workspace = true, features = ["axum"] }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true, features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlite",
] }
tempfile = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["parsing"] }
tmdb = { path = "../tmdb" }
tokio = { workspace = true, features = [
    "macros",
    "fs",
    "io-util",
    "process",
    "rt-multi-thread",
    "signal",
] }
tokio-stream = { workspace = true, features = ["sync"] }
tower-http = { workspace = true, features = ["cors", "fs", "trace"] }
tokio-util = { workspace = true }
tower = { workspace = true, features = ["util"] }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4"] }
walkdir = { workspace = true }

[dependencies.speq]
workspace = true
features = ["axum", "axum-extra-cookie-private", "camino", "serde_qs-axum"]

[dev-dependencies]
assert-json-diff = { workspace = true }
http-body-util = { workspace = true }
insta = { workspace = true, features = ["json"] }
inventory = { workspace = true }
libtest-mimic = { workspace = true }
mime = { workspace = true }
mockall = { workspace = true }
pretty_assertions = { workspace = true }
test-macros = { path = "../test-macros" }
time = { workspace = true, features = ["macros"] }
tower = { workspace = true }
wiremock = { workspace = true }
