[package]
name = "flutter-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter-codec = { path = "../flutter-codec" }
flutter-windows-sys = { path = "../flutter-windows-sys" }
paste = "1.0"

[dependencies.windows]
version = "0.48.0"
features = ["Win32_Foundation"]
