[package]
name = "windows-app-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.windows]
version = "0.48"
features = ["implement", "Foundation_Collections", "Graphics", "UI"]

[build-dependencies]
xml-rs = "0.8"
