[package]
name = "video_player_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
dart_sdk = { path = "dart_sdk" }
mpv = { path = "mpv" }

[dependencies.flutter-plugin]
path = "../../crates/flutter-plugin"

[dependencies.windows]
version = "0.44.0"
features = [
    "Foundation",
    "Media",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_UI_WindowsAndMessaging",
]
