[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
dirs = "5.0"
raw-window-handle = "0.5"
winit = "0.28"

[dependencies.flutter-windows-sys]
path = "../../crates/flutter-windows-sys"

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]
