[package]
name = "zenith_flutter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0"
raw-window-handle = "0.5"
winit = "0.28"

[dependencies.flutter-desktop-messenger]
path = "../../crates/flutter-desktop-messenger"

[dependencies.flutter-windows-sys]
path = "../../crates/flutter-windows-sys"

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
embed-manifest = "1.3.1"
windres = "0.2.2"
