[package]
name = "zenith_flutter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "0.2"
dirs = "5.0"

[dependencies.flutter-desktop-messenger]
path = "../../crates/flutter-desktop-messenger"

[dependencies.flutter-windows-sys]
path = "../../crates/flutter-windows-sys"

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies.windows-app-sdk]
path = "../../crates/windows-app-sdk"

[build-dependencies]
embed-manifest = "1.3.1"
windres = "0.2.2"
